--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn" (click)="test(backgroundColor)" [style.background-color]="backgroundColor" [style.color]="textColor"> {{ label }}</button>
+<button class="btn" (click)="displayColor(backgroundColor)" [style.background-color]="backgroundColor" [style.color]="textColor"> {{ label }}</button>
