--- a/src/app/button/button.component.scss
+++ b/src/app/button/button.component.scss
@@ -2,5 +2,9 @@
     margin: 8px;
     padding: 8px;
     border: 0;
-    border-radius: 8px;
+    border-radius: 4px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    &:hover {
+        filter: brightness(110%);
+    }
 }
